--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: independence
 Type: Package
 Title: Fast Rank-Based Independence Testing
-Version: 1.0
-Date: 2020-08-10
+Version: 1.0.1
+Date: 2020-10-23
 Authors@R: person("Chaim", "Even-Zohar", email = "chaim@ucdavis.edu", role = c("aut", "cre"))
 Maintainer: Chaim Even-Zohar <chaim@ucdavis.edu>
 Description: Performs three ranking-based nonparametric tests for the
@@ -20,7 +20,7 @@ Description: Performs three ranking-based nonparametric tests for the
                 in time O(n log n) given n iid paired samples.
                 The computation of R and T* uses a new algorithm,
                 following work of Even-Zohar and Leng (2019),
-                see <arXiv:1911.01414> and references therein.
+                see <arXiv:2010.09712>, <arXiv:1911.01414>.
 License: GPL (>= 3)
 Imports: Rcpp (>= 1.0.5)
 LinkingTo: Rcpp
@@ -28,5 +28,5 @@ Suggests: TauStar, testthat
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 NeedsCompilation: yes
-Packaged: 2020-08-17 19:53:57 UTC; cevenzohar
+Packaged: 2020-10-23 10:59:54 UTC; cevenzohar
 Author: Chaim Even-Zohar [aut, cre]
